--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,7 +6,21 @@ on:
       - main
 
 jobs:
-  simple_deployment_pipeline:
+
+  check_style:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 16
+      - name: Install dependencies
+        run: npm install
+      - name: Check style
+        run: npm run eslint
+
+
+  deployment_pipeline:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
@@ -15,6 +29,11 @@ jobs:
           node-version: '16'
       - name: Install dependencies
         run: npm install
+      - name: Builds
+        run: npm run build
 
-      - name: Check style
-        run: npm run eslint
+      - name: Run server tests
+        run: npm run test:server
+
+      - name: Run client tests
+        run: npm run test:client
