--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blogilista-frontend",
+  "name": "blogappcicd",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,19 +7,20 @@
     "start": "react-scripts start",
     "start:server": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit && react-scripts test",
+    "test:server": "cross-env NODE_ENV=test jest ./tests --verbose --runInBand --forceExit",
+    "test:client": "react-scripts test src/components --watchAll=false",
     "start:test": "cross-env NODE_ENV=test node index.js",
-    "build": "react-scripts build",
+    "build": "react-scripts build && webpack --mode production",
     "eject": "react-scripts eject",
     "eslint": "eslint .",
     "eslintfix": "eslint . --fix",
     "cypress:open": "cypress open"
   },
-  "repository": {
-  },
+  "repository": {},
   "author": "Samuli Toppi",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.3",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -27,7 +28,6 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.0",
-    "axios": "^1.2.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,20 +35,26 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "jest": "^29.3.1",
-    "nodemon": "^2.0.20",
-    "supertest": "^6.3.3",
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "babel-loader": "^9.1.3",
+    "cross-env": "^7.0.3",
+    "css-loader": "^7.1.2",
     "cypress": "^12.14.0",
     "eslint-plugin-cypress": "^2.13.3",
-    "eslint-plugin-jest": "^27.2.1"
+    "eslint-plugin-jest": "^27.2.1",
+    "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
+    "style-loader": "^4.0.0",
+    "supertest": "^6.3.3",
+    "webpack": "^5.92.0",
+    "webpack-cli": "^5.1.4"
   },
-  "jest": {
-    "testEnvironment": "node"
-  },
+  "jest": {},
   "eslintConfig": {
     "extends": [
       "react-app",
