--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,9 +21,6 @@ jobs:
 
 
   deployment_pipeline:
-    strategy:
-      matrix:
-        mongodb-version: ['6.0', '7.0', '8.0']
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
@@ -34,7 +31,7 @@ jobs:
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.11.0
         with:
-          mongodb-version: ${{ matrix.mongodb-version }}
+          mongodb-version: 5.0
           mongodb-replica-set: test-rs
           mongodb-port: 42069
 
