Trying to get mongodb to work in actions

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,6 +35,9 @@ jobs:
           mongodb-replica-set: test-rs
           mongodb-port: 42069
 
+      - name: Set MongoDB connection string
+        run: echo "TEST_MONGODB_URI=mongodb://localhost:42069/test" >> $GITHUB_ENV
+
       - name: Install dependencies
         run: npm install
       - name: Builds
