--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "eject": "react-scripts eject",
     "eslint": "eslint .",
     "eslintfix": "eslint . --fix",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "repository": {},
   "author": "Samuli Toppi",
