Cypress in actions

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,10 +37,19 @@ jobs:
           mongodb-port: 42069
 
       - name: Set MongoDB connection string
+        run: echo "MONGODB_URI=mongodb://localhost:42069" >> $GITHUB_ENV
+
+      - name: Set MongoDB test connection string
         run: echo "TEST_MONGODB_URI=mongodb://localhost:42069/test" >> $GITHUB_ENV
 
       - name: Set secret
         run: echo "SECRET=${{ secrets.SECRET }}" >> $GITHUB_ENV
+
+      - name: Set backend port
+        run: echo "BACKEND_PORT=3003" >> $GITHUB_ENV
+
+      - name: Set frontend port
+        run: echo "PORT=3000" >> $GITHUB_ENV
 
       - name: Install dependencies
         run: npm install
