--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -70,6 +70,6 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           command: npm run cypress:run
-          start: npm run start:server && npm run start
+          start: npm run start:server & && npm run start &
           wait-on: http://localhost:3000
 
