--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "react-scripts start",
     "start:server": "cross-env NODE_ENV=production node index.js",
+    "start:both": "concurrently \"npm run start\" \"npm run start:server\"",
+    "serve": "serve -s build",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "test:server": "cross-env NODE_ENV=test jest ./tests --verbose --runInBand --forceExit",
     "test:client": "react-scripts test src/components --watchAll=false",
@@ -50,6 +52,7 @@
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.3.1",
     "nodemon": "^2.0.20",
+    "start-server-and-test": "^2.0.4",
     "style-loader": "^4.0.0",
     "supertest": "^6.3.3",
     "webpack": "^5.92.0",
