--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "react-scripts start",
     "start:server": "cross-env NODE_ENV=production node index.js",
-    "start:both": "concurrently \"npm run start\" \"npm run start:server\"",
+    "start:all": "npm-run-all --parallel start:server start:client",
     "serve": "serve -s build",
     "start:ci": "concurrently --kill-others \"npm run start:server\" \"npm run start\" \"wait-on http://localhost:3003 http://localhost:3000\"",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
@@ -32,6 +32,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.0",
+    "npm-run-all": "^4.1.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -42,6 +43,7 @@
     "@babel/core": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
+    "@flydotio/dockerfile": "^0.5.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -54,6 +56,7 @@
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.3.1",
     "nodemon": "^2.0.20",
+    "serve": "^14.2.3",
     "start-server-and-test": "^2.0.4",
     "style-loader": "^4.0.0",
     "supertest": "^6.3.3",
