health check passes

--- a/fly.toml
+++ b/fly.toml
@@ -27,16 +27,9 @@ primary_region = 'arn'
   cpu_kind = 'shared'
   cpus = 1
 
-[[services]]
-  internal_port = 3003
-  protocol = "tcp"
-
-  [services.concurrency]
-    hard_limit = 25
-    soft_limit = 20
-
-  [[services.http_checks]]
-    interval = 10000
-    timeout = 2000
-    path = "/health"
-    protocol = "http"
+[[http_service.checks]]
+  grace_period = "10s"
+  interval = "30s"
+  method = "GET"
+  timeout = "5s"
+  path = "/api/health"
