--- a/.github/workflows/health.yml
+++ b/.github/workflows/health.yml
@@ -1,9 +1,8 @@
 name: Periodic health check
 
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: "0 */12 * * *"
 
 jobs:
   health_check:
