--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -83,6 +83,7 @@ jobs:
 
   deployment_pipeline:
     needs: [run_tests]
+    if: github.event_name == 'push'
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
@@ -111,6 +112,7 @@ jobs:
 
   tag_release:
       needs: [deployment_pipeline]
+      if: github.event_name == 'push'
       runs-on: ubuntu-20.04
       steps:
         - name: Checkout repository
